--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,3 +4,12 @@
 @import './layout.css';
 @import './animations.css';
 @import './celebration.css';
+
+/* Disable animations during page load to prevent flickering */
+.preload * {
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -ms-transition: none !important;
+  -o-transition: none !important;
+  transition: none !important;
+}
